--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/knigopoisk?serverTimezone=Europe/Moscow&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=12345678
@@ -12,6 +12,7 @@ spring.freemarker.expose-request-attributes = true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
+upload.path = /home/alexandr/knigopoisk/src/main/uploads
 
 spring.mail.host=smtp.yandex.ru
 spring.mail.username=sidorovalexandr777@yandex.ru
