Привел Censor к надлежащему виду.Сделал из него bean. В утилиты добавил класс с получением списка строк из файла.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
 
+pathToCensor = /home/alexandr/knigopoisk/src/main/resources/censorList.txt
+
